--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = rest_exam.settings.base
+DJANGO_SETTINGS_MODULE = rest_exam.settings.dev
 django_find_project = false
 addopts = -v
 markers =
